--- a/upload_book.html
+++ b/upload_book.html
@@ -48,13 +48,13 @@
             <div class="flex justify-between items-center py-6">
                 <div class="text-3xl font-bold font-serif text-slate-800 flex items-center">
                     <span class="mr-2 text-4xl">📖</span>
-                    <a href="bookstore.html">Hezera</a>
-                </div>
+                    <a href="index.html">Hezera</a>
+                </di>
                 <nav class="hidden md:flex items-center space-x-8">
-                    <a href="bookstore.html" class="text-slate-700 hover:text-orange-800 nav-link">Home</a>
+                    <a href="index.html" class="text-slate-700 hover:text-orange-800 nav-link">Home</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <a href="shopping_cart.html" class="text-slate-700 hover:text-orange-800 relative transition-colors">
+                    <a href="shopingcart.html" class="text-slate-700 hover:text-orange-800 relative transition-colors">
                         <span class="text-2xl">🛒</span>
                         <span id="cart-count" class="absolute -top-1 -right-2 bg-red-600 text-white text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full">0</span>
                     </a>
@@ -133,7 +133,7 @@
 
                 // Redirect to the bookstore page after a short delay
                 setTimeout(() => {
-                    window.location.href = 'bookstore.html';
+                    window.location.href = 'index.html';
                 }, 2000);
             });
 
@@ -149,3 +149,4 @@
     </script>
 </body>
 </html>
+
