--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <a href="#" class="text-slate-700 hover:text-orange-800">Blog</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <a href="shopping_cart.html" class="text-slate-700 hover:text-orange-800 relative transition-colors">
+                    <a href="shopingcart.html" class="text-slate-700 hover:text-orange-800 relative transition-colors">
                         <span class="text-2xl">🛒</span>
                         <span id="cart-count" class="absolute -top-1 -right-2 bg-red-600 text-white text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full">0</span>
                     </a>
@@ -346,4 +346,5 @@
         }
     </script>
 </body>
+
 </html>
